--- a/quartz/components/styles/toc.scss
+++ b/quartz/components/styles/toc.scss
@@ -17,11 +17,13 @@ button.toc-header {
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  box-sizing: border-box;
   margin: 0;
-  padding: 0;
+  padding: 0.2rem 0.55rem;
   color: var(--dark);
   background-color: transparent;
   border: none;
+  border-radius: 7px;
   cursor: pointer;
   text-align: left;
 
